--- a/src/com/Aggie_FindIt/Admin.fxml
+++ b/src/com/Aggie_FindIt/Admin.fxml
@@ -2,14 +2,11 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ButtonBar?>
-<?import javafx.scene.control.ChoiceBox?>
-<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.SplitPane?>
-<?import javafx.scene.control.TextArea?>
-<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
@@ -30,7 +27,7 @@
             <HBox minWidth="41.0" prefHeight="40.0" prefWidth="435.0" />
             <HBox minWidth="41.0" prefHeight="40.0" prefWidth="435.0" />
             <HBox minWidth="41.0" prefHeight="40.0" prefWidth="435.0" />
-          <Button mnemonicParsing="false" text="Logout" textAlignment="RIGHT" onAction="#logout"/>
+          <Button mnemonicParsing="false" text="Logout" textAlignment="RIGHT" />
         </buttons>
       </ButtonBar>
     <SplitPane dividerPositions="0.1475501113585746, 0.7511135857461024" focusTraversable="true" prefHeight="-1.0" prefWidth="-1.0" VBox.vgrow="ALWAYS">
@@ -45,10 +42,10 @@
                 <Color red="0.624" green="0.624" blue="0.624" fx:id="x2" />
               </textFill>
             </Label>
-                  <Button layoutX="24.0" layoutY="83.0" mnemonicParsing="false" onAction="#itemReturn" text="Item Return" />
-                  <Button layoutX="28.0" layoutY="144.0" mnemonicParsing="false" onAction="#addItem" text="Add Item" />
-                  <Button layoutX="21.0" layoutY="51.0" mnemonicParsing="false" text="Item Requests" />
-                  <Button layoutX="23.0" layoutY="114.0" mnemonicParsing="false" onAction="#itemLookup" text="Item lookup" />
+                  <Button layoutX="24.0" layoutY="83.0" mnemonicParsing="false" text="Item Return" />
+                  <Button layoutX="28.0" layoutY="144.0" mnemonicParsing="false" text="Item Input" />
+                  <Button layoutX="21.0" layoutY="51.0" mnemonicParsing="false" text="Item Request" />
+                  <Button layoutX="23.0" layoutY="114.0" mnemonicParsing="false" text="Item lookup" />
           </children>
         </AnchorPane>
         <ScrollPane prefHeight="-1.0" prefWidth="-1.0">
@@ -56,16 +53,8 @@
             <AnchorPane id="Content" minHeight="-1.0" minWidth="-1.0" prefHeight="545.0" prefWidth="534.0">
               <children>
                 <Label alignment="CENTER" font="$x1" layoutX="14.0" layoutY="14.0" style="&#10;" text="Main" textAlignment="CENTER" textFill="$x2" wrapText="false" />
-                        <Button layoutX="395.0" layoutY="519.0" mnemonicParsing="false" text="Procedure Reminder" />
-                        <TextField fx:id="itemDescription" disable="true" layoutX="16.0" layoutY="132.0" prefHeight="70.0" prefWidth="504.0" promptText="Item description" />
-                        <TextField fx:id="itemColor" disable="true" layoutX="193.0" layoutY="86.0" promptText="Item Color" />
-                        <ChoiceBox fx:id="itemCategory" disable="true" layoutX="15.0" layoutY="86.0" prefWidth="150.0" />
-                        <Label fx:id="itemCategoryLabel" disable="true" layoutX="15.0" layoutY="69.0" text="Category" />
-                        <DatePicker fx:id="itemDate" disable="true" layoutX="353.0" layoutY="86.0" />
-                        <Label fx:id="itemDateLabel" disable="true" layoutX="353.0" layoutY="69.0" text="Day turned in" />
-                        <TextArea fx:id="returnText" disable="true" layoutX="21.0" layoutY="86.0" prefHeight="48.0" prefWidth="493.0" text="Please refer yourself to the Procedure Reminder in the bottom right of this pane for the&#10;correct procedure when returning an item." />
-                        <Button fx:id="completeReturn" disable="true" layoutX="21.0" layoutY="155.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="130.0" text="Completed return" />
-                        <Button fx:id="cancelReturn" disable="true" layoutX="178.0" layoutY="155.0" mnemonicParsing="false" text="Cancel" />
+                        <Button layoutX="377.0" layoutY="516.0" mnemonicParsing="false" text="Procedure Reminder" />
+                        <ImageView fitHeight="278.0" fitWidth="371.0" layoutX="78.0" layoutY="24.0" pickOnBounds="true" preserveRatio="true" />
               </children>
             </AnchorPane>
           </content>
