--- a/bin/com/Aggie_FindIt/Admin.fxml
+++ b/bin/com/Aggie_FindIt/Admin.fxml
@@ -1,12 +1,82 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ButtonBar?>
+<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.SplitPane?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.paint.Color?>
+<?import javafx.scene.text.Font?>
 
-<VBox alignment="CENTER" spacing="20" style="-fx-background-color: linear-gradient(to bottom, #941853, #6A1237);"
-      xmlns:fx="http://javafx.com/fxml" fx:controller="com.Aggie_FindIt.AdminPageController">
-    <padding>
-        <Insets top="20" right="20" bottom="20" left="20"/>
-    </padding>
+<VBox prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.Aggie_FindIt.AdminPageController">
+  <children>
+      <ButtonBar prefHeight="40.0" prefWidth="200.0" style="-fx-background-color: #981853;">
+        <buttons>
+            <Label alignment="CENTER" minWidth="60.0" prefHeight="23.0" prefWidth="-1.0" style="&#10;" text="Aggie Find It" textAlignment="CENTER" textFill="WHITE" wrapText="false">
+               <font>
+                  <Font size="18.0" fx:id="x11" />
+               </font>
+            </Label>
+            <HBox minWidth="41.0" prefHeight="40.0" prefWidth="435.0" />
+            <HBox minWidth="41.0" prefHeight="40.0" prefWidth="435.0" />
+            <HBox minWidth="41.0" prefHeight="40.0" prefWidth="435.0" />
+            <HBox minWidth="41.0" prefHeight="40.0" prefWidth="435.0" />
+            <HBox minWidth="41.0" prefHeight="40.0" prefWidth="435.0" />
+          <Button mnemonicParsing="false" text="Logout" textAlignment="RIGHT" onAction="#logout"/>
+        </buttons>
+      </ButtonBar>
+    <SplitPane dividerPositions="0.1475501113585746, 0.7511135857461024" focusTraversable="true" prefHeight="-1.0" prefWidth="-1.0" VBox.vgrow="ALWAYS">
+      <items>
+        <AnchorPane>
+          <children>
+            <Label alignment="CENTER" layoutX="14.0" layoutY="14.0" minWidth="60.0" prefWidth="-1.0" style="&#10;" text="Item interact" textAlignment="CENTER" wrapText="false">
+              <font>
+                <Font size="18.0" fx:id="x1" />
+              </font>
+              <textFill>
+                <Color red="0.624" green="0.624" blue="0.624" fx:id="x2" />
+              </textFill>
+            </Label>
+                  <Button layoutX="24.0" layoutY="83.0" mnemonicParsing="false" onAction="#itemReturn" text="Item Return" />
+                  <Button layoutX="28.0" layoutY="144.0" mnemonicParsing="false" onAction="#addItem" text="Add Item" />
+                  <Button layoutX="21.0" layoutY="51.0" mnemonicParsing="false" text="Item Requests" />
+                  <Button layoutX="23.0" layoutY="114.0" mnemonicParsing="false" onAction="#itemLookup" text="Item lookup" />
+          </children>
+        </AnchorPane>
+        <ScrollPane prefHeight="-1.0" prefWidth="-1.0">
+          <content>
+            <AnchorPane id="Content" minHeight="-1.0" minWidth="-1.0" prefHeight="545.0" prefWidth="534.0">
+              <children>
+                <Label alignment="CENTER" font="$x1" layoutX="14.0" layoutY="14.0" style="&#10;" text="Main" textAlignment="CENTER" textFill="$x2" wrapText="false" />
+                        <Button layoutX="395.0" layoutY="519.0" mnemonicParsing="false" text="Procedure Reminder" />
+                        <TextField fx:id="itemDescription" disable="true" layoutX="16.0" layoutY="132.0" prefHeight="70.0" prefWidth="504.0" promptText="Item description" />
+                        <TextField fx:id="itemColor" disable="true" layoutX="193.0" layoutY="86.0" promptText="Item Color" />
+                        <ChoiceBox fx:id="itemCategory" disable="true" layoutX="15.0" layoutY="86.0" prefWidth="150.0" />
+                        <Label fx:id="itemCategoryLabel" disable="true" layoutX="15.0" layoutY="69.0" text="Category" />
+                        <DatePicker fx:id="itemDate" disable="true" layoutX="353.0" layoutY="86.0" />
+                        <Label fx:id="itemDateLabel" disable="true" layoutX="353.0" layoutY="69.0" text="Day turned in" />
+                        <TextArea fx:id="returnText" disable="true" layoutX="21.0" layoutY="86.0" prefHeight="48.0" prefWidth="493.0" text="Please refer yourself to the Procedure Reminder in the bottom right of this pane for the&#10;correct procedure when returning an item." />
+                        <Button fx:id="completeReturn" disable="true" layoutX="21.0" layoutY="155.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="130.0" text="Completed return" />
+                        <Button fx:id="cancelReturn" disable="true" layoutX="178.0" layoutY="155.0" mnemonicParsing="false" text="Cancel" />
+              </children>
+            </AnchorPane>
+          </content>
+        </ScrollPane>
+        <AnchorPane>
+          <children>
+                  <ListView editable="true" prefHeight="559.0" prefWidth="216.0" />
+            <Label alignment="CENTER" font="$x1" layoutX="14.0" layoutY="14.0" style="&#10;" text="Log" textAlignment="CENTER" textFill="$x2" wrapText="false" />
+          </children>
+        </AnchorPane>
+      </items>
+    </SplitPane>
+  </children>
 </VBox>
