--- a/src/com/Aggie_FindIt/AdminIntermediate.fxml
+++ b/src/com/Aggie_FindIt/AdminIntermediate.fxml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
+
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ChoiceBox?>
@@ -6,6 +7,7 @@
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
+
 <VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #981853;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.Aggie_FindIt.AdminIntermediatePageController">
    <children>
       <Label text="Please indicate what building you are located at today" textFill="#fffefe" translateY="-20.0">
@@ -14,8 +16,8 @@
          </font>
       </Label>
       <ChoiceBox fx:id="buildingsDropdown" prefWidth="150.0" />
-      <Button mnemonicParsing="false" text="Submit " translateY="20.0" onAction="#submit" />
-      <TextArea prefHeight="83.0" prefWidth="600.0" text="Placeholder for procedure reminders" translateY="80.0">
+      <Button mnemonicParsing="false" onAction="#submit" text="Submit " translateY="20.0" />
+      <TextArea prefHeight="226.0" prefWidth="560.0" style="-fx-background-color: #FFFFFF;" text="To return an item: &#10;&#10;1. Make sure the item is in storage&#10; &#10;2. Once complete, using item description and information, ask students questions about &#10;the item to make sure it is theirs. &#10;&#10;3. Once it is made sure they know the item, if applicable, do one of the following to verify&#10;ownership:&#10; -Ask them to unlock the electronic device&#10; -If no password is needed for the device, ask if it is possible to provide receipts of &#10;  purchase" translateY="35.0">
          <VBox.margin>
             <Insets left="20.0" right="20.0" />
          </VBox.margin>
