--- a/src/com/Aggie_FindIt/Admin.fxml
+++ b/src/com/Aggie_FindIt/Admin.fxml
@@ -1,17 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ButtonBar?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ListView?>
-<?import javafx.scene.control.ScrollPane?>
-<?import javafx.scene.control.SplitPane?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 <?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.paint.Color?>
 <?import javafx.scene.text.Font?>
+<?import javafx.collections.FXCollections?>
+<?import java.lang.String?>
 
 <VBox prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.Aggie_FindIt.AdminPageController">
   <children>
@@ -43,7 +38,7 @@
               </textFill>
             </Label>
                   <Button layoutX="24.0" layoutY="83.0" mnemonicParsing="false" text="Item Return" />
-                  <Button layoutX="28.0" layoutY="144.0" mnemonicParsing="false" text="Item Input" />
+                  <Button layoutX="28.0" layoutY="144.0" mnemonicParsing="false" text="Item Input" onAction="#showItemInputForm"/>
                   <Button layoutX="21.0" layoutY="51.0" mnemonicParsing="false" text="Item Request" />
                   <Button layoutX="23.0" layoutY="114.0" mnemonicParsing="false" text="Item lookup" />
           </children>
@@ -53,18 +48,70 @@
             <AnchorPane id="Content" minHeight="-1.0" minWidth="-1.0" prefHeight="545.0" prefWidth="534.0">
               <children>
                 <Label alignment="CENTER" font="$x1" layoutX="14.0" layoutY="14.0" style="&#10;" text="Main" textAlignment="CENTER" textFill="$x2" wrapText="false" />
-                        <Button layoutX="377.0" layoutY="516.0" mnemonicParsing="false" text="Procedure Reminder" />
+                <Button layoutX="377.0" layoutY="516.0" mnemonicParsing="false" text="Procedure Reminder" />
                         <ImageView fitHeight="278.0" fitWidth="371.0" layoutX="78.0" layoutY="24.0" pickOnBounds="true" preserveRatio="true" />
+                <VBox fx:id="itemInputForm" layoutX="50.0" layoutY="80.0" spacing="5" alignment="CENTER" visible="false">
+                  <Label text="Add New Item"/>
+                  <HBox>
+                      <Label text="Item Name:"/>
+                      <TextField fx:id="itemNameField"/>
+                  </HBox>
+                  <HBox>
+                      <Label text="Description:"/>
+                      <TextField fx:id="descriptionField"/>
+                  </HBox>
+                  <HBox>
+                      <Label text="Building:"/>
+                      <ComboBox fx:id="buildingField">
+                          <items>
+                              <FXCollections fx:factory="observableArrayList">
+                                  <String fx:value="Library"/>
+                                  <String fx:value="Cafeteria"/>
+                                  <String fx:value="Gym"/>
+                                  <String fx:value="Classroom"/>
+                                  <String fx:value="Dormitory"/>
+                                  <String fx:value="Other"/>
+                              </FXCollections>
+                          </items>
+                      </ComboBox>
+                  </HBox>
+                  <HBox>
+                      <Label text="Category:"/>
+                      <ComboBox fx:id="categoryField">
+                          <items>
+                              <FXCollections fx:factory="observableArrayList">
+                                  <String fx:value="Electronics"/>
+                                  <String fx:value="Clothing"/>
+                                  <String fx:value="Books"/>
+                                  <String fx:value="Keys"/>
+                                  <String fx:value="Accessories"/>
+                                  <String fx:value="Others"/>
+                              </FXCollections>
+                          </items>
+                      </ComboBox>
+                  </HBox>
+                  <Button text="Submit" onAction="#handleSubmitItem"/>
+                  <Button text="Cancel" onAction="#handleCancelItemInput"/>
+                </VBox>
+
               </children>
             </AnchorPane>
           </content>
         </ScrollPane>
         <AnchorPane>
           <children>
-                  <ListView editable="true" prefHeight="559.0" prefWidth="216.0" />
-            <Label alignment="CENTER" font="$x1" layoutX="14.0" layoutY="14.0" style="&#10;" text="Log" textAlignment="CENTER" textFill="$x2" wrapText="false" />
+            <TableView fx:id="logTableView" >
+                  <columns>
+                      <TableColumn fx:id="itemNameColumn" text="Item Name" prefWidth="100.0" />
+                      <TableColumn fx:id="descriptionColumn" text="Description" prefWidth="100.0" />
+                      <TableColumn fx:id="buildingColumn" text="Building" prefWidth="100.0" />
+                      <TableColumn fx:id="categoryColumn" text="Category" prefWidth="100.0" />
+                      <TableColumn fx:id="timeColumn" text="Time" prefWidth="100.0" />
+                  </columns>
+              </TableView>
           </children>
-        </AnchorPane>
+          <Button fx:id="reloadButton" text="Reload" onAction="#updateLog" />
+      </AnchorPane>
       </items>
     </SplitPane>
   </children>
