--- a/src/com/Aggie_FindIt/Admin.fxml
+++ b/src/com/Aggie_FindIt/Admin.fxml
@@ -1,13 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ButtonBar?>
+<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.SplitPane?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.paint.Color?>
 <?import javafx.scene.text.Font?>
-<?import javafx.collections.FXCollections?>
-<?import java.lang.String?>
 
 <VBox prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.Aggie_FindIt.AdminPageController">
   <children>
@@ -39,10 +46,9 @@
               </textFill>
             </Label>
                   <Button layoutX="24.0" layoutY="83.0" mnemonicParsing="false" onAction="#itemReturn" text="Item Return" />
-                  <Button layoutX="28.0" layoutY="144.0" mnemonicParsing="false" text="Item Input" onAction="#showItemInputForm"/>
-                  <Button layoutX="21.0" layoutY="51.0" mnemonicParsing="false" text="Item Request" />
+                  <Button layoutX="28.0" layoutY="144.0" mnemonicParsing="false" onAction="#addItem" text="Add Item" />
+                  <Button layoutX="21.0" layoutY="51.0" mnemonicParsing="false" text="Item Requests" />
                   <Button layoutX="23.0" layoutY="114.0" mnemonicParsing="false" onAction="#itemSearch" text="Item lookup" />
-
           </children>
         </AnchorPane>
         <ScrollPane prefHeight="-1.0" prefWidth="-1.0">
@@ -50,53 +56,6 @@
             <AnchorPane id="Content" fx:id="middlePane" minHeight="-1.0" minWidth="-1.0" prefHeight="545.0" prefWidth="534.0">
               <children>
                 <Label alignment="CENTER" font="$x1" layoutX="14.0" layoutY="14.0" style="&#10;" text="Main" textAlignment="CENTER" textFill="$x2" wrapText="false" />
-                
-                <Button layoutX="377.0" layoutY="516.0" mnemonicParsing="false" text="Procedure Reminder" />
-                        <ImageView fitHeight="278.0" fitWidth="371.0" layoutX="78.0" layoutY="24.0" pickOnBounds="true" preserveRatio="true" />
-                <VBox fx:id="itemInputForm" layoutX="50.0" layoutY="80.0" spacing="5" alignment="CENTER" visible="false">
-                  <Label text="Add New Item"/>
-                  <HBox>
-                      <Label text="Item Name:"/>
-                      <TextField fx:id="itemNameField"/>
-                  </HBox>
-                  <HBox>
-                      <Label text="Description:"/>
-                      <TextField fx:id="descriptionField"/>
-                  </HBox>
-                  <HBox>
-                      <Label text="Building:"/>
-                      <ComboBox fx:id="buildingField">
-                          <items>
-                              <FXCollections fx:factory="observableArrayList">
-                                  <String fx:value="Library"/>
-                                  <String fx:value="Cafeteria"/>
-                                  <String fx:value="Gym"/>
-                                  <String fx:value="Classroom"/>
-                                  <String fx:value="Dormitory"/>
-                                  <String fx:value="Other"/>
-                              </FXCollections>
-                          </items>
-                      </ComboBox>
-                  </HBox>
-                  <HBox>
-                      <Label text="Category:"/>
-                      <ComboBox fx:id="categoryField">
-                          <items>
-                              <FXCollections fx:factory="observableArrayList">
-                                  <String fx:value="Electronics"/>
-                                  <String fx:value="Clothing"/>
-                                  <String fx:value="Books"/>
-                                  <String fx:value="Keys"/>
-                                  <String fx:value="Accessories"/>
-                                  <String fx:value="Others"/>
-                              </FXCollections>
-                          </items>
-                      </ComboBox>
-                  </HBox>
-                  <Button text="Submit" onAction="#handleSubmitItem"/>
-                  <Button text="Cancel" onAction="#handleCancelItemInput"/>
-                </VBox>
-
                         <TextField fx:id="itemDescription" disable="true" layoutX="16.0" layoutY="132.0" prefHeight="70.0" prefWidth="504.0" promptText="Item description" />
                         <TextField fx:id="itemColor" disable="true" layoutX="193.0" layoutY="86.0" promptText="Item Color" />
                         <ChoiceBox fx:id="itemCategory" disable="true" layoutX="15.0" layoutY="86.0" prefWidth="150.0" />
@@ -110,25 +69,16 @@
                         <TextField fx:id="itemSearchName" disable="true" layoutX="185.0" layoutY="86.0" promptText="item name" />
                         <Button fx:id="searchButton" disable="true" layoutX="21.0" layoutY="215.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="130.0" text="Search item" />
                         <TextArea fx:id="procedure" disable="true" layoutX="21.0" layoutY="261.0" prefHeight="224.0" prefWidth="492.0" text="To return an item: &#10;&#10;1. Make sure the item is in storage&#10; &#10;2. Once complete, using item description and information, ask students questions about &#10;the item to make sure it is theirs. &#10;&#10;3. Once it is made sure they know the item, if applicable, do one of the following to verify&#10;ownership:&#10; -Ask them to unlock the electronic device&#10; -If no password is needed for the device, ask if it is possible to provide receipts of &#10;  purchase" />
-
               </children>
             </AnchorPane>
           </content>
         </ScrollPane>
         <AnchorPane>
           <children>
-            <TableView fx:id="logTableView" >
-                  <columns>
-                      <TableColumn fx:id="itemNameColumn" text="Item Name" prefWidth="100.0" />
-                      <TableColumn fx:id="descriptionColumn" text="Description" prefWidth="100.0" />
-                      <TableColumn fx:id="buildingColumn" text="Building" prefWidth="100.0" />
-                      <TableColumn fx:id="categoryColumn" text="Category" prefWidth="100.0" />
-                      <TableColumn fx:id="timeColumn" text="Time" prefWidth="100.0" />
-                  </columns>
-              </TableView>
+                  <ListView editable="true" prefHeight="559.0" prefWidth="216.0" />
+            <Label alignment="CENTER" font="$x1" layoutX="14.0" layoutY="14.0" style="&#10;" text="Log" textAlignment="CENTER" textFill="$x2" wrapText="false" />
           </children>
-          <Button fx:id="reloadButton" text="Reload" onAction="#updateLog" />
-      </AnchorPane>
+        </AnchorPane>
       </items>
     </SplitPane>
   </children>
