--- a/src/com/Aggie_FindIt/Admin.fxml
+++ b/src/com/Aggie_FindIt/Admin.fxml
@@ -1,20 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ButtonBar?>
-<?import javafx.scene.control.ChoiceBox?>
-<?import javafx.scene.control.DatePicker?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ListView?>
-<?import javafx.scene.control.ScrollPane?>
-<?import javafx.scene.control.SplitPane?>
-<?import javafx.scene.control.TextArea?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.paint.Color?>
 <?import javafx.scene.text.Font?>
+<?import javafx.collections.FXCollections?>
+<?import java.lang.String?>
 
 <VBox prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.Aggie_FindIt.AdminPageController">
   <children>
@@ -30,7 +22,7 @@
             <HBox minWidth="41.0" prefHeight="40.0" prefWidth="435.0" />
             <HBox minWidth="41.0" prefHeight="40.0" prefWidth="435.0" />
             <HBox minWidth="41.0" prefHeight="40.0" prefWidth="435.0" />
-          <Button mnemonicParsing="false" onAction="#logout" text="Logout" textAlignment="RIGHT" />
+          <Button mnemonicParsing="false" text="Logout" textAlignment="RIGHT" />
         </buttons>
       </ButtonBar>
     <SplitPane dividerPositions="0.1475501113585746, 0.7511135857461024" focusTraversable="true" prefHeight="-1.0" prefWidth="-1.0" VBox.vgrow="ALWAYS">
@@ -53,7 +45,6 @@
         </AnchorPane>
         <ScrollPane prefHeight="-1.0" prefWidth="-1.0">
           <content>
-
           <AnchorPane id="Content" fx:id="middlePane" minHeight="-1.0" minWidth="-1.0" prefHeight="545.0" prefWidth="534.0">
               <children>
                 <Label alignment="CENTER" font="$x1" layoutX="14.0" layoutY="14.0" style="&#10;" text="Main" textAlignment="CENTER" textFill="$x2" wrapText="false" />
@@ -113,16 +104,25 @@
                   <Button text="Submit" onAction="#handleSubmitItem"/>
                   <Button text="Cancel" onAction="#handleCancelItemInput"/>
                 </VBox>
+
               </children>
             </AnchorPane>
           </content>
         </ScrollPane>
         <AnchorPane>
           <children>
-                  <ListView editable="true" prefHeight="559.0" prefWidth="216.0" />
-            <Label alignment="CENTER" font="$x1" layoutX="14.0" layoutY="14.0" style="&#10;" text="Log" textAlignment="CENTER" textFill="$x2" wrapText="false" />
+            <TableView fx:id="logTableView" >
+                  <columns>
+                      <TableColumn fx:id="itemNameColumn" text="Item Name" prefWidth="100.0" />
+                      <TableColumn fx:id="descriptionColumn" text="Description" prefWidth="100.0" />
+                      <TableColumn fx:id="buildingColumn" text="Building" prefWidth="100.0" />
+                      <TableColumn fx:id="categoryColumn" text="Category" prefWidth="100.0" />
+                      <TableColumn fx:id="timeColumn" text="Time" prefWidth="100.0" />
+                  </columns>
+              </TableView>
           </children>
-        </AnchorPane>
+          <Button fx:id="reloadButton" text="Reload" onAction="#updateLog" />
+      </AnchorPane>
       </items>
     </SplitPane>
   </children>
