--- a/src/com/Aggie_FindIt/StudentPage.fxml
+++ b/src/com/Aggie_FindIt/StudentPage.fxml
@@ -16,10 +16,11 @@
     <Label text="Student Page" style="-fx-font-size: 24px; -fx-text-fill: white;"/>
     
     <!-- TableView for item log -->
-    <TableView fx:id="itemTable" prefWidth="400" prefHeight="300">
+    <TableView fx:id="itemTable" prefWidth="600" prefHeight="300" maxWidth="600">
         <columns>
-            <TableColumn fx:id="buildingColumn" text="Description" prefWidth="200"/>
-            <TableColumn fx:id="timeColumn" text="Location" prefWidth="200"/>
+            <TableColumn fx:id="buildingColumn" text="Location" prefWidth="200"/>
+            <TableColumn fx:id="timeColumn" text="Time" prefWidth="200"/>
+            <TableColumn fx:id="catagoryColumn" text="Catagory" prefWidth="200"/>
         </columns>
     </TableView>
 
