--- a/src/com/Aggie_FindIt/About.fxml
+++ b/src/com/Aggie_FindIt/About.fxml
@@ -1,21 +1,76 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.paint.Color?>
+<?import javafx.scene.paint.RadialGradient?>
+<?import javafx.scene.paint.Stop?>
+<?import javafx.scene.shape.Rectangle?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<VBox alignment="CENTER" spacing="20" style="-fx-background-color: linear-gradient(to bottom, #941853, #6A1237);"
-      xmlns:fx="http://javafx.com/fxml" fx:controller="com.Aggie_FindIt.AboutPageController">
+<VBox alignment="CENTER" minHeight="720.0" minWidth="1024.0" spacing="20" style="-fx-background-color: linear-gradient(to bottom, #941853, #6A1237);" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.Aggie_FindIt.AboutPageController">
     <padding>
-        <Insets top="20" right="20" bottom="20" left="20"/>
+        <Insets bottom="20" left="20" right="20" top="20" />
     </padding>
 
-    <Label text="About Aggie Find-it" style="-fx-font-size: 24px; -fx-text-fill: white;"/>
-    
-    <TextArea wrapText="true" editable="false" style="-fx-background-color: transparent; -fx-text-fill: black;">
-        Aggie Find-it is a platform designed to help the New Mexico State University community easily report and find lost items. 
-        Our mission is to simplify the process of reuniting lost belongings with their rightful owners. Go Aggies!
-    </TextArea>
-    
-    <Button text="Back to Home" onAction="#backToHome" style="-fx-background-color: #6c757d; -fx-text-fill: white;"/>
+    <Label style="-fx-font-size: 30px; -fx-text-fill: white;" text="About Aggie Find-It">
+      <textFill>
+         <RadialGradient centerX="0.4594096222486883" centerY="0.5" radius="0.5">
+            <stops>
+               <Stop>
+                  <color>
+                     <Color red="1.0" green="1.0" blue="1.0" />
+                  </color>
+               </Stop>
+               <Stop offset="0.14227642276422764">
+                  <color>
+                     <Color />
+                  </color>
+               </Stop>
+               <Stop offset="0.20528455284552843">
+                  <color>
+                     <Color red="1.0" green="1.0" blue="1.0" />
+                  </color>
+               </Stop>
+               <Stop offset="0.42479674796747974">
+                  <color>
+                     <Color red="1.0" green="1.0" blue="1.0" />
+                  </color>
+               </Stop>
+               <Stop offset="0.516260162601626">
+                  <color>
+                     <Color red="1.0" green="1.0" blue="1.0" />
+                  </color>
+               </Stop>
+               <Stop offset="0.5772357723577236">
+                  <color>
+                     <Color red="1.0" green="1.0" blue="1.0" />
+                  </color>
+               </Stop>
+               <Stop offset="1.0">
+                  <color>
+                     <Color red="1.0" green="1.0" blue="1.0" />
+                  </color>
+               </Stop>
+            </stops>
+         </RadialGradient>
+      </textFill></Label>
+
+    <StackPane>
+        <!-- Background rectangle -->
+        <Rectangle arcHeight="10" arcWidth="10" fill="#a8896e" height="200.0" opacity="0.5" width="750.0" />
+
+        <!-- Text placed on top of the rectangle -->
+        <Text fill="WHITE" text="Aggie Find-It is a platform designed to help the New Mexico State University community easily report and find lost items. Our mission is to digitize and simplify the process of reuniting lost belongings with their rightful owners. Thanks for using the software! GO AGGIES!" textAlignment="CENTER" wrappingWidth="700.0">
+            <font>
+                <Font size="18.0" />
+            </font>
+        </Text>
+    </StackPane>
+
+    <Button onAction="#backToHome" style="-fx-background-color: #6c757d; -fx-text-fill: white; -fx-font-size: 16px;" text="Back to Home" />
 </VBox>
