--- a/src/com/Aggie_FindIt/WhereToGo.fxml
+++ b/src/com/Aggie_FindIt/WhereToGo.fxml
@@ -2,18 +2,13 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
 
-<VBox alignment="CENTER" spacing="20" style="-fx-background-color: linear-gradient(to bottom, #941853, #6A1237);" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/23.0.1" fx:controller="com.Aggie_FindIt.WhereToGoPageController">
+<VBox alignment="CENTER" minHeight="720.0" minWidth="1024.0" spacing="20" style="-fx-background-color: linear-gradient(to bottom, #941853, #6A1237);" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.Aggie_FindIt.WhereToGoPageController">
     <padding>
         <Insets bottom="20" left="20" right="20" top="20" />
     </padding>
@@ -23,9 +18,9 @@
         <Label style="-fx-font-size: 15px; -fx-text-fill: white;" text="Below are buildings where lost and found items go! Select a building and see where it is at!" />
     </VBox>
 
-    <VBox spacing="10" alignment="CENTER" xmlns:fx="http://javafx.com/fxml">
-        <ComboBox fx:id="comboBox" promptText="Select a location" prefWidth="200" />
-        <ImageView fx:id="imageView" fitHeight="600" fitWidth="600" preserveRatio="true" />
+    <VBox alignment="CENTER" spacing="10" xmlns:fx="http://javafx.com/fxml">
+        <ComboBox fx:id="comboBox" prefWidth="200" promptText="Select a location" />
+        <ImageView fx:id="imageView" fitHeight="500.0" fitWidth="779.0" preserveRatio="true" />
     </VBox>
 
     <HBox alignment="CENTER" spacing="15">
